@@ -1,16 +1,15 @@
 # GoobyDesk
 
-Peppermint.sh no longer appears to be maintained and was left in an unusable state. I would contribute but I have no desire to learn Typescript as a Network Engineer. Thus GoobyDesk. It is barebones and simple. No Databases. I don't like them. User Accounts and Tickets databases are json files for simplicity.
+Simple, Lightweight, Databaseless Service Desk for Home Labbers, Families, and One Man MSPs.
 
-**Current Version:** Major.Minor.Patch - 0.1.5
+**Current Version:**  v0.1.5
 
 ## How GoobyDesk works
 
 - GoobyDesk is a python3.12 Flask project that by default runs at ```http://127.0.0.1:5000```.
 - Landing page is a basic Service Desk form.
-- User provided _email_ and _subject_ are used to create an auto-email.
-- The script will monitor the configured inbox every 2 minutes for replies.
-- User replies are appended to the "notes" in tickets.json
+- User provided _email_ and _subject_ are used to generate a _Notification_ email sent to the user.
+- The script will monitor the configured inbox every 5 minutes for replies. When found, the contents will be append to the Ticket Notes.
 
 ## Linux Project Setup
 
