@@ -113,7 +113,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="https://mattfaulkner.us-southeast-1.linodeobjects.com/logo_color.png" alt="BlueBotPC Logo">
+            <img src="static\GoobyLogo.webp" alt="GoobyFRS Logo">
         </div>
         <h2>GoobyDesk Technician Dashboard</h2>
         <ul class="ticket-list">
