@@ -85,7 +85,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="https://mattfaulkner.us-southeast-1.linodeobjects.com/logo_color.png" alt="BlueBotPC Logo">
+            <img src="static\GoobyLogo.webp" alt="GoobyFRS Logo">
         </div>
         <h2>Technician Login</h2>
         <form method="post">
